linstaller (2.0.2~pre1-1) emily; urgency=low

  * fstab: fixed automounting of vfat partitions.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Tue, 14 Feb 2012 23:52:14 +0100

linstaller (2.0.1~pre2.1-1) emily; urgency=low

  * userhost: renamed the password_max_chars preseed to password_min_chars:
    should sleep a bit more.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Tue, 10 Jan 2012 20:01:32 +0100

linstaller (2.0.1~pre2-1) emily; urgency=low

  * userhost: lowered minimum password charchters to 4, now
    configurable via the password_max_chars preseed.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Tue, 10 Jan 2012 19:35:19 +0100

linstaller (2.0.0.1-1) emily; urgency=low

  * partdisks: library: do not raise an exception if AttributeError when
    checking for swap partitions.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 29 Dec 2011 20:09:38 +0100

linstaller (2.0.0-1) emily; urgency=low

  * Final 2.0.0 release.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sat, 24 Dec 2011 10:22:48 +0100

linstaller (2.0.0~pre3.1-1) emily; urgency=low

  * Rebuild which adds mount_nolive.sh.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 18 Dec 2011 12:11:09 +0100

linstaller (2.0.0~pre3-1) emily; urgency=low

  * modules/unsquash: fixed the crash on window resizing.
  * modules/partdisks: inst: do not raise an exception when umount
    fails in revert.
  * mount_nolive.sh: added.
  * setup.py and debian/: ship the clean module and mount_nolive.sh.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 18 Dec 2011 11:49:45 +0100

linstaller (2.0.0~pre2-1) emily; urgency=low

  * linstaller: added ability to preseed from command-line;
  * core/config: support initial (file-less) configurations;
  * modules/widget_test: splitted tests; added sequence, progressbar_val,
    progressbar_sleep seeds;
  * core/module: support default items in cache().
  * modules/update: specify default when calling cache().